Initialized tauri app

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,8 +33,15 @@
 		"vscode": {
 			"extensions": [
 				"rust-lang.rust-analyzer",
-				"eamodio.gitlens"
-			]
+				"eamodio.gitlens",
+				"svelte.svelte-vscode",
+    			"tauri-apps.tauri-vscode"
+			],
+			"settings": {
+				"[svelte]": {
+					"svelte.enable-ts-plugin": true
+				}
+			}
 		}
 	}
 
